[package]
name = "bin_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
owo-colors = "3"
utf16string = "0.2.0"
byteorder = "1.4.3"
anyhow = "1.0"
chrono = "0.4.19"
prettytable-rs = "^0.8"
unbytify = "0.2"
ascii_converter = "0.2.1"
hex = "0.4.3"
clap = "3.1.8"
arguments = "0.6.2"